# pixel-pull

./: .gitattributes  .gitignore  README.md
PixelPull/: compose.yaml  pom.xml
PixelPull/src/main/java/com/satish/PixelPull/: PixelPullApplication.java
PixelPull/src/main/java/com/satish/PixelPull/auth/: AuthController.java  JwtRequestFilter.java  JwtUtil.java  SecurityConfig.java  UserDetailsServiceImpl.java
PixelPull/src/main/java/com/satish/PixelPull/photo/: Photo.java  PhotoController.java  PhotoFace.java  PhotoFaceRepository.java  PhotoService.java  WebConfig.java
PixelPull/src/main/java/com/satish/PixelPull/user/: User.java  UserRepository.java
PixelPull/src/main/resources/: application.properties
PixelPull/src/main/resources/static/js/: app.js
backend/: compose.yaml
backend/src/main/java/com/satish/PixelPull/: PixelPullApplication.java
backend/src/main/java/com/satish/PixelPull/auth/: AuthController.java  JwtUtil.java  SecurityConfig.java
backend/src/main/java/com/satish/PixelPull/photo/: Photo.java  PhotoController.java  PhotoFace.java  PhotoRepository.java  PhotoScheduler.java  PhotoService.java  PhotoStatus.java  WebConfig.java
backend/src/main/java/com/satish/PixelPull/user/: User.java  UserRepository.java
backend/src/main/resources/: application.properties  schema.sql
backend/src/test/java/com/satish/PixelPull/: PixelPullApplicationTests.java
frontend/: README.md  dashboard.html  index.html  login.html  search.html  vite.config.js
frontend/css/: style.css
frontend/js/: app.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Search.jsx
lsm-engine/: CMakeLists.txt  README.md  setup_toolchain.ps1
lsm-engine/bench/: benchmark.cpp
lsm-engine/src/: bloom_filter.cpp  bloom_filter.h  compaction.cpp  compaction.h  lsm_engine.cpp  lsm_engine.h  memtable.cpp  memtable.h  sstable.cpp  sstable.h  wal.cpp  wal.h
lsm-engine/tests/: test_bloom_filter.cpp  test_compaction.cpp  test_engine.cpp  test_memtable.cpp  test_sstable.cpp
pixel-pull manager/: pom.xml
pixel-pull manager/src/main/java/com/pixelpull/pixel_pull/: PixelPullApplication.java
pixel-pull manager/src/main/resources/: application.properties
pixel-pull manager/src/test/java/com/pixelpull/pixel_pull/: PixelPullApplicationTests.java
worker/: CMakeLists.txt  Dockerfile
worker/include/: db_manager.h  face_processor.h
worker/src/: db_manager.cpp  face_extractor.cpp  face_processor.cpp  main.cpp
